--- a/app/src/main/res/layout/breeding_stock_list_item.xml
+++ b/app/src/main/res/layout/breeding_stock_list_item.xml
@@ -351,7 +351,7 @@
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:background="@color/colorPrimary"
+                android:background="#a4b7a0"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
